# example-contests-workspace

./: .gitignore  Cargo.toml  README.md  interesting_tutorials.md  old_edu.md  problems_to_solve.md  reccuring_issues.md  rounds_to_do.md  run_problem.sh  solutions.md  to_upsolve.md
a_arithmetic_progression/: Cargo.toml
a_candies_and_two_sisters/: Cargo.toml
a_curriculum_vitae/: Cargo.toml
a_diplomas_and_certificates/: Cargo.toml
a_divide_it/: Cargo.toml
a_divisibility_problem/: Cargo.toml
a_game_with_integers/: Cargo.toml
a_hit_the_lottery/: Cargo.toml
a_integer_sequence_dividing/: Cargo.toml
a_least_product/: Cargo.toml
a_literature_lesson/: Cargo.toml
a_maximise_the_score/: Cargo.toml
a_minutes_before_the_new_year/: Cargo.toml
a_nastia_and_nearly_good_numbers/: Cargo.toml
a_odd_divisor/: Cargo.toml
a_polycarps_pockets/: Cargo.toml
a_quasi_palindrome/: Cargo.toml
a_rectangle_cutting/: Cargo.toml
a_remainder/: Cargo.toml
a_simple_design/: Cargo.toml
a_three_piles_of_candies/: Cargo.toml
a_vozmozhno_vi_znaete_etikh_lyudei/: Cargo.toml
a_wallet_exchange/: Cargo.toml
algo_lib/: Cargo.toml
b01_mst/: Cargo.toml
b_append/: Cargo.toml
b_array_kcoloring/: Cargo.toml
b_binary_string_constructing/: Cargo.toml
b_candies_division/: Cargo.toml
b_construct_the_string/: Cargo.toml
b_digits_permutations/: Cargo.toml
b_erase_first_or_second_letter/: Cargo.toml
b_foto_na_pamyat2_round_version/: Cargo.toml
b_johnny_and_grandmaster/: Cargo.toml
b_kayaking/: Cargo.toml
b_math_show/: Cargo.toml
b_maximum_value/: Cargo.toml
b_merge_it/: Cargo.toml
b_mike_and_feet/: Cargo.toml
b_nezzar_and_binary_string/: Cargo.toml
b_odd_sum_segments/: Cargo.toml
b_password/: Cargo.toml
b_permutation_game/: Cargo.toml
b_permutation_printing/: Cargo.toml
b_plus_minus_split/: Cargo.toml
b_polycarp_training/: Cargo.toml
b_same_parity_summands/: Cargo.toml
b_two_divisors/: Cargo.toml
c123/: Cargo.toml
c1_dsokoban/: Cargo.toml
c2_potions_hard_version/: Cargo.toml
c2_skyscrapers_hard_version/: Cargo.toml
c_alternating_subsequence/: Cargo.toml
c_ciel_the_commander/: Cargo.toml
c_civilization/: Cargo.toml
c_classy_numbers/: Cargo.toml
c_did_we_get_everything_covered/: Cargo.toml
c_divide_and_divide/: Cargo.toml
c_doors_breaking_and_repairing/: Cargo.toml
c_four_segments/: Cargo.toml
c_friends_and_gifts/: Cargo.toml
c_good_string/: Cargo.toml
c_grouping_increases/: Cargo.toml
c_ice_cave/: Cargo.toml
c_intense_heat/: Cargo.toml
c_kth_not_divisible_by_n/: Cargo.toml
c_lexicographically_largest/: Cargo.toml
c_longest_regular_bracket_sequence/: Cargo.toml
c_lose_it/: Cargo.toml
c_magic_ship/: Cargo.toml
c_maximal_gcd/: Cargo.toml
c_medium_design/: Cargo.toml
c_move_brackets/: Cargo.toml
c_need_for_pink_slips/: Cargo.toml
c_partitioning_the_array/: Cargo.toml
c_physical_education_lesson/: Cargo.toml
c_product_of_three_numbers/: Cargo.toml
c_robot_breakout/: Cargo.toml
c_sofa_thief/: Cargo.toml
c_square_subsets/: Cargo.toml
c_the_art_of_dealing_with_atm/: Cargo.toml
c_the_football_season/: Cargo.toml
c_three_bags/: Cargo.toml
c_two_teams_composing/: Cargo.toml
c_watering_an_array/: Cargo.toml
c_watto_and_mechanism/: Cargo.toml
d01_tree/: Cargo.toml
d1_rgbsubstring_easy_version/: Cargo.toml
d1_sum_over_all_substrings_easy_version/: Cargo.toml
d2_domino_hard_version/: Cargo.toml
d_abstring/: Cargo.toml
d_almost_all_divisors/: Cargo.toml
d_another_problem_about_dividing_numbers/: Cargo.toml
d_anti_sudoku/: Cargo.toml
d_aqua_moon_and_chess/: Cargo.toml
d_array_repetition/: Cargo.toml
d_array_splitting/: Cargo.toml
d_balanced_ternary_string/: Cargo.toml
d_binary_literature/: Cargo.toml
d_buy_aticket/: Cargo.toml
d_christmas_trees/: Cargo.toml
d_coins_and_queries/: Cargo.toml
d_count_good_substrings/: Cargo.toml
d_distance_in_tree/: Cargo.toml
d_ehab_and_the_expected_xorproblem/: Cargo.toml
d_exact_change/: Cargo.toml
d_expression_evaluation_error/: Cargo.toml
d_fill_the_bag/: Cargo.toml
d_flood_fill/: Cargo.toml
d_geniuss_gambit/: Cargo.toml
d_good_trip/: Cargo.toml
d_kuroni_and_the_celebration/: Cargo.toml
d_lonely_mountain_dungeons/: Cargo.toml
d_max_median/: Cargo.toml
d_multicolored_cars/: Cargo.toml
d_multiset/: Cargo.toml
d_number_of_parallelograms/: Cargo.toml
d_odd_even_subsequence/: Cargo.toml
d_omkar_and_circle/: Cargo.toml
d_pair_of_topics/: Cargo.toml
d_print_a1337_string/: Cargo.toml
d_recover_it/: Cargo.toml
d_roads_not_only_in_berland/: Cargo.toml
d_same_differences/: Cargo.toml
d_segment_tree/: Cargo.toml
d_shichikuji_and_power_grid/: Cargo.toml
d_super_takahashi_bros/: Cargo.toml
d_tree_tag/: Cargo.toml
d_two_strings_swaps/: Cargo.toml
d_water_tree/: Cargo.toml
d_yet_another_array_queries_problem/: Cargo.toml
d_yet_another_sorting_problem/: Cargo.toml
d_yet_another_subarray_problem/: Cargo.toml
dynamic_range_sum_queries/: Cargo.toml
e1_asterism_easy_version/: Cargo.toml
e1_three_blocks_palindrome_easy_version/: Cargo.toml
e2_string_coloring_hard_version/: Cargo.toml
e_card_game_again/: Cargo.toml
e_connected_component_on_achessboard/: Cargo.toml
e_connected_components/: Cargo.toml
e_construct_matrix/: Cargo.toml
e_counting_arrays/: Cargo.toml
e_cover_it/: Cargo.toml
e_divisibility_by25/: Cargo.toml
e_fish/: Cargo.toml
e_funny_substrings/: Cargo.toml
e_kperiodic_garland/: Cargo.toml
e_mancala2/: Cargo.toml
e_masha_forgetful/: Cargo.toml
e_maximum_subsequence_value/: Cargo.toml
e_modular_sequence/: Cargo.toml
e_monotonic_renumeration/: Cargo.toml
e_nearest_opposite_parity/: Cargo.toml
e_necklace_assembly/: Cargo.toml
e_new_year_parties/: Cargo.toml
e_obtain_apermutation/: Cargo.toml
e_polycarps_new_job/: Cargo.toml
e_space_harbour/: Cargo.toml
e_special_elements/: Cargo.toml
e_string_reversal/: Cargo.toml
e_tree_constructing/: Cargo.toml
e_tree_queries/: Cargo.toml
e_tree_with_small_distances/: Cargo.toml
(+518 files in other folders)
