[workspace]
members = [
    "c_magic_ship",
    "f_moving_points",
    "e_maximum_subsequence_value",
    "b_two_divisors",
    "d_tree_tag",
    "c_need_for_pink_slips",
    "c_fools_and_roads",
    "d_roads_not_only_in_berland",
    "e_tree_queries",
    "c_medium_design",
    "a_simple_design",
    "d_distance_in_tree",
    "d_another_problem_about_dividing_numbers",
    "dynamic_range_sum_queries",
    "static_range_minimum_queries",
    "static_range_sum_queries",
    "b_password",
    "f_consecutive_subsequence",
    "e_construct_matrix",
    "c_watering_an_array",
    "b_erase_first_or_second_letter",
    "a_least_product",
    "c2_potions_hard_version",
    "e_special_elements",
    "d_pair_of_topics",
    "c_product_of_three_numbers",
    "b_same_parity_summands",
    "a_nastia_and_nearly_good_numbers",
    "c_alternating_subsequence",
    "d_same_differences",
    "c_move_brackets",
    "c_kth_not_divisible_by_n",
    "a_odd_divisor",
    "a_hit_the_lottery",
    "a_divisibility_problem",
    "main",
    "algo_lib",
]
resolver = "2"
