[workspace]
members = [
    "c_three_bags",
    "e2_string_coloring_hard_version",
    "d_shichikuji_and_power_grid",
    "d_yet_another_subarray_problem",
    "d_array_repetition",
    "c_partitioning_the_array",
    "b_summation_game",
    "satisfying_constraints",
    "f_lets_play_the_hat",
    "e_kperiodic_garland",
    "d_multiset",
    "e_necklace_assembly",
    "e_obtain_apermutation",
    "c2_skyscrapers_hard_version",
    "b_maximum_value",
    "c_ciel_the_commander",
    "f_wi_fi",
    "f_array_partition",
    "e_funny_substrings",
    "d_max_median",
    "e_masha_forgetful",
    "e_divisibility_by25",
    "a_candies_and_two_sisters",
    "d01_tree",
    "c_grouping_increases",
    "b_plus_minus_split",
    "a_wallet_exchange",
    "g_reducing_delivery_cost",
    "f_number_of_subsequences",
    "d_print_a1337_string",
    "f_education",
    "c_longest_regular_bracket_sequence",
    "e_fish",
    "c_maximal_gcd",
    "c_magic_ship",
    "f_moving_points",
    "e_maximum_subsequence_value",
    "b_two_divisors",
    "d_tree_tag",
    "c_need_for_pink_slips",
    "c_fools_and_roads",
    "d_roads_not_only_in_berland",
    "e_tree_queries",
    "c_medium_design",
    "a_simple_design",
    "d_distance_in_tree",
    "d_another_problem_about_dividing_numbers",
    "dynamic_range_sum_queries",
    "static_range_minimum_queries",
    "static_range_sum_queries",
    "b_password",
    "f_consecutive_subsequence",
    "e_construct_matrix",
    "c_watering_an_array",
    "b_erase_first_or_second_letter",
    "a_least_product",
    "c2_potions_hard_version",
    "e_special_elements",
    "d_pair_of_topics",
    "c_product_of_three_numbers",
    "b_same_parity_summands",
    "a_nastia_and_nearly_good_numbers",
    "c_alternating_subsequence",
    "d_same_differences",
    "c_move_brackets",
    "c_kth_not_divisible_by_n",
    "a_odd_divisor",
    "a_hit_the_lottery",
    "a_divisibility_problem",
    "main",
    "algo_lib",
]
resolver = "2"
