[workspace]
members = [
    "c_square_subsets",
    "d_omkar_and_circle",
    "c_the_football_season",
    "d_expression_evaluation_error",
    "b01_mst",
    "c1_dsokoban",
    "c_closest_cities",
    "b_forming_triangles",
    "a_tricky_template",
    "e_modular_sequence",
    "d_lonely_mountain_dungeons",
    "c_physical_education_lesson",
    "b_equalize",
    "a_rectangle_cutting",
    "f_s1",
    "e_mancala2",
    "d_super_takahashi_bros",
    "c_divide_and_divide",
    "b_append",
    "a_arithmetic_progression",
    "f_robots_on_agrid",
    "e1_three_blocks_palindrome_easy_version",
    "d_anti_sudoku",
    "c_two_teams_composing",
    "b_construct_the_string",
    "e_tree_constructing",
    "f_abbreviation",
    "d_coins_and_queries",
    "c_intense_heat",
    "b_binary_string_constructing",
    "a_polycarps_pockets",
    "d_count_good_substrings",
    "e_counting_arrays",
    "d_exact_change",
    "g_min_or_tree",
    "d_flood_fill",
    "e_string_reversal",
    "f_level_generation",
    "c_sofa_thief",
    "e_card_game_again",
    "d_multicolored_cars",
    "b_permutation_game",
    "a_diplomas_and_certificates",
    "e_turn_off_the_tv",
    "d_yet_another_array_queries_problem",
    "c123",
    "b_kayaking",
    "a_quasi_palindrome",
    "f_diygarland",
    "e_new_year_parties",
    "d_christmas_trees",
    "c_friends_and_gifts",
    "b_candies_division",
    "a_minutes_before_the_new_year",
    "f_kth_path",
    "e_connected_component_on_achessboard",
    "d1_rgbsubstring_easy_version",
    "c_robot_breakout",
    "b_odd_sum_segments",
    "a_three_piles_of_candies",
    "f2_microtransactions_hard_version",
    "e_two_arrays_and_sum_of_functions",
    "d_almost_all_divisors",
    "c_good_string",
    "b_polycarp_training",
    "a_remainder",
    "d_yet_another_sorting_problem",
    "d_abstring",
    "b_nezzar_and_binary_string",
    "d_binary_literature",
    "d_odd_even_subsequence",
    "d_aqua_moon_and_chess",
    "f_destroy_it",
    "e_cover_it",
    "d_recover_it",
    "c_lose_it",
    "b_merge_it",
    "a_divide_it",
    "d_buy_aticket",
    "c_ice_cave",
    "f_elongated_matrix",
    "e_monotonic_renumeration",
    "d_balanced_ternary_string",
    "c_doors_breaking_and_repairing",
    "b_array_kcoloring",
    "a_integer_sequence_dividing",
    "e_space_harbour",
    "d_good_trip",
    "c_did_we_get_everything_covered",
    "b_abalanced_problemset",
    "a_we_got_everything_covered",
    "f_random_query",
    "c_four_segments",
    "b_math_show",
    "a_curriculum_vitae",
    "e_xorguessing",
    "d_array_splitting",
    "d_segment_tree",
    "b_johnny_and_grandmaster",
    "c_classy_numbers",
    "d_number_of_parallelograms",
    "c_civilization",
    "d_two_strings_swaps",
    "g_unusual_entertainment",
    "f_alexs_whims",
    "e_queue_sort",
    "d_yarik_and_musical_notes",
    "c_yarik_and_array",
    "b250_thousand_tons_of_tnt",
    "a_game_with_integers",
    "e_we_need_more_bosses",
    "d_water_tree",
    "e_connected_components",
    "e_tree_with_small_distances",
    "f2_pictures_with_kittens_hard_version",
    "d2_domino_hard_version",
    "e_nearest_opposite_parity",
    "d_prefixes_and_suffixes",
    "c_watto_and_mechanism",
    "c_three_bags",
    "e2_string_coloring_hard_version",
    "d_shichikuji_and_power_grid",
    "d_yet_another_subarray_problem",
    "d_array_repetition",
    "c_partitioning_the_array",
    "b_summation_game",
    "satisfying_constraints",
    "f_lets_play_the_hat",
    "e_kperiodic_garland",
    "d_multiset",
    "e_necklace_assembly",
    "e_obtain_apermutation",
    "c2_skyscrapers_hard_version",
    "b_maximum_value",
    "c_ciel_the_commander",
    "f_wi_fi",
    "f_array_partition",
    "e_funny_substrings",
    "d_max_median",
    "e_masha_forgetful",
    "e_divisibility_by25",
    "a_candies_and_two_sisters",
    "d01_tree",
    "c_grouping_increases",
    "b_plus_minus_split",
    "a_wallet_exchange",
    "g_reducing_delivery_cost",
    "f_number_of_subsequences",
    "d_print_a1337_string",
    "f_education",
    "c_longest_regular_bracket_sequence",
    "e_fish",
    "c_maximal_gcd",
    "c_magic_ship",
    "f_moving_points",
    "e_maximum_subsequence_value",
    "b_two_divisors",
    "d_tree_tag",
    "c_need_for_pink_slips",
    "c_fools_and_roads",
    "d_roads_not_only_in_berland",
    "e_tree_queries",
    "c_medium_design",
    "a_simple_design",
    "d_distance_in_tree",
    "d_another_problem_about_dividing_numbers",
    "dynamic_range_sum_queries",
    "static_range_minimum_queries",
    "static_range_sum_queries",
    "b_password",
    "f_consecutive_subsequence",
    "e_construct_matrix",
    "c_watering_an_array",
    "b_erase_first_or_second_letter",
    "a_least_product",
    "c2_potions_hard_version",
    "e_special_elements",
    "d_pair_of_topics",
    "c_product_of_three_numbers",
    "b_same_parity_summands",
    "a_nastia_and_nearly_good_numbers",
    "c_alternating_subsequence",
    "d_same_differences",
    "c_move_brackets",
    "c_kth_not_divisible_by_n",
    "a_odd_divisor",
    "a_hit_the_lottery",
    "a_divisibility_problem",
    "main",
    "algo_lib",
]
resolver = "2"
